Fix post navigation and events bugs on Safari

--- a/app/assets/stylus/prioritize.styl
+++ b/app/assets/stylus/prioritize.styl
@@ -244,6 +244,7 @@ button
     margin-bottom 10px
 
     .search-submit
+        margin-right 1rem
         text-align center
         width 30px
 
