--- a/app/assets/stylus/widgets/event.styl
+++ b/app/assets/stylus/widgets/event.styl
@@ -32,15 +32,17 @@
         top $box-padding
 
     &--image
-        height 100px
+        height 80px
         max-width 50%
         position absolute
         right $box-padding
         top $box-padding
 
         img
+            height auto
             max-height 100%
             max-width 100%
+            width auto
 
     &--date
         font-size 20px
